push code from dell

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,6 +1,6 @@
 #sidebar {
-    background-color: blueviolet;
+    background-color: #787372;
     float: left;
     width: 300px;
-    height: auto;
+    height: 1000px;
 }
