--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+#root{
+  background-color:#f5f5f5;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -21,7 +23,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(122, 96, 96);
 }
 
 .App-link {
