--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,10 +1,11 @@
 .wrapper{
     padding-right: 0 !important;
     margin-bottom: 15px !important;
+    background-color: #fff;    
 }
-
-.item {
-    margin-right: 10px;
-    box-shadow: 0 0 10px 1px gray;
-    margin-bottom: 5px;
+.item a {
+    color: black !important;
+}
+.item:hover{
+    box-shadow: rgb(0 0 0 / 10%) 1px 1px 20px;
 }
