--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,6 +1,11 @@
 #sidebar {
-    background-color: blueviolet;
-    float: left;
-    width: 300px;
-    height: 1000px;
+    background-color:#f5f5f5;
+    /*float: left;*/
+}
+
+.top-bar{
+    width: 100%;
+    height: 10px;
+    margin-top: 0px;
+    background-color: blue;
 }
