--- a/src/Sass/components/footer.scss
+++ b/src/Sass/components/footer.scss
@@ -1,6 +1,13 @@
 #footer{
     height: 300px;
     width: 100%;
-    padding: 15px;
+    padding: 30px;
     background-color:#EFF5FB;
+
+    ul li{
+        list-style-type: none;
+    }
+    ul li:first-child{
+        font-weight: bold;
+    }
 }
