--- a/src/Sass/components/home.scss
+++ b/src/Sass/components/home.scss
@@ -7,11 +7,6 @@
     height: 260px;
     padding:0;
     
-    .banner-carousel{
-        @include fix-layout();
-
-    }
-
     .banner-image-up{
         @include fix-layout(50%, 100% );        
         background-image: url("../../images/banner-img-up.jpg");
@@ -24,3 +19,15 @@
         background-image: url("../../images/banner-img-down.jpg");
     }  
 }
+
+//category style sheets
+.category{
+    text-align: center;
+    height: 120px;
+        
+}
+
+
+
+
+@import "../base/_base";
