--- a/src/Sass/Carousel.scss
+++ b/src/Sass/Carousel.scss
@@ -21,7 +21,11 @@ img.image-slider{
     top:0;
     left: 0;
     display: none;
-    
-   
+}
+.dot{
+    padding: 10px;
+    margin-right: 5px;
+    cursor: pointer;
+    border-radius: 50%;
 }
 
