--- a/src/Sass/components/Item.scss
+++ b/src/Sass/components/Item.scss
@@ -2,7 +2,7 @@
     right: 0;
     background-color: #ffd839;
     width:50px;
-    z-index: 1000000;
+    z-index: 100;
     color: white;
     height: 55px;
     text-align: center;
@@ -32,6 +32,7 @@
     height: auto;
     width: fix-content;
     background-color: rgb(242, 82, 32);
+    opacity: 0.7;
     &:before{
         content: "";
         display: inline-block;
@@ -45,12 +46,13 @@
     }
 
 }
+
 div#item{
-    border: 1px solid whitesmoke;
+    border: 1px solid rgb(238, 231, 231);
     border-radius: 5px;
-    padding: 0 2.5px;
-    box-shadow: 5px 5px 2px whitesmoke;
-    
+    padding: 0 0px;
+    min-width: 186px;
+    max-width: 20%;
     a{
         text-decoration: none!important;
        color: black
@@ -61,10 +63,28 @@ div#item{
         border: rgb(243, 91, 91) solid 1px;
         transform: scale(1.01);
         transition:  all .2s ease-in-out;
+        box-shadow: 5px 5px 2px whitesmoke;
     }
     
 }
+
 div.card-body{
     padding: 10px 10px;
+    .card-text{
+        overflow: hidden;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        text-overflow: ellipsis;
+        max-height: 150px;
+    }
+    div.price{
+        color:rgb(242, 82, 32);
+        font: bolder;
+    }
+    div.prev-price{
+        color:rgb(236, 229, 229);
+        font-size: 12px;
+        
+    }
 }
 
