Implement authentication include login logout

--- a/src/Sass/components/header.scss
+++ b/src/Sass/components/header.scss
@@ -1,17 +1,83 @@
 nav{
-    background-color: #EFF5FB;
+    position: relative;
+    
 }
 .item-menu{
     color: black!important;
 }
+
 img#logo{
     border: none;
     border-radius: 50%;
-    height: 110px;
-    width: 110px;
+    height: 80px;
+    width: 80px;
     background-position: center;
     &:hover{
         transform: scale(1.1);
         transition:  all .2s ease-in-out;
     }
 }
+
+
+
+img.user-avatar{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+img.icon {
+    width: 30px;
+    height: auto;
+    &:hover {
+        box-shadow: 0 .5rem 1rem rgba(#000, .15);
+    }
+}
+div#dropdown-abc{
+    position: absolute;
+    top: 70px;
+    right: 0px;
+    background: #fff;
+    padding: 0;
+    margin: 0;
+    z-index: 9999;
+    width: 200px;
+    height: auto;
+    border: none;
+    box-shadow: 0 .5rem 1rem rgba(#000, .15);
+    border-radius: 15px;
+
+    ul{
+        padding: 10px 0px;
+    }
+}
+
+.pointer-cursor{
+    cursor: pointer;
+}
+@media (max-width: 992px) {
+    //
+    #search{
+        width: 500px;
+    }
+}
+
+@media (max-width: 768px) {
+    //
+    #search{
+        width: 300px;
+    }
+}
+
+@media (max-width: 576px) {
+    //
+    #search{
+        width: 200px;
+    }
+    img#logo{
+        height: 70px;
+        width: 70px;
+    }
+}
+
+
