improve redux persist and  fix bug show error message on login page

--- a/src/Sass/components/productDetails.scss
+++ b/src/Sass/components/productDetails.scss
@@ -10,4 +10,9 @@
     #product-infor{
         background: blue;
     }
+
+    #description{
+        padding-right: 15px;
+        padding-left: 15px;
+    }
 }
