--- a/src/Sass/components/header.scss
+++ b/src/Sass/components/header.scss
@@ -18,8 +18,6 @@ img#logo{
     }
 }
 
-
-
 img.user-avatar{
     height: 50px;
     width: 50px;
@@ -30,9 +28,32 @@ img.icon {
     width: 30px;
     height: auto;
     &:hover {
-        box-shadow: 0 .5rem 1rem rgba(#000, .15);
+        box-shadow: 0 .5rem 1rem rgba(#dddddd, .15);
     }
 }
+#icon-shoppingcart{
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+.icon-cart-badge{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: -0px;
+    right: -3px;
+    width: 20px;
+    height: 20px;
+    background-color:red;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    border: none;
+    outline: none;
+    
+}
+
 div#dropdown-abc{
     position: absolute;
     top: 70px;
@@ -55,6 +76,9 @@ div#dropdown-abc{
 .pointer-cursor{
     cursor: pointer;
 }
+
+
+//
 @media (max-width: 992px) {
     //
     #search{
