--- a/src/Sass/app.scss
+++ b/src/Sass/app.scss
@@ -1,3 +1,11 @@
+html,body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 320px !important;
+    height: 100%;
+    }
+
 div#main{
     background-color: #f5f5f5;
 }
