--- a/src/Sass/components/footer.scss
+++ b/src/Sass/components/footer.scss
@@ -1,5 +1,9 @@
+#abc{
+    background-color: red;
+}
 #footer{
-    height: 300px;
+    min-height: 300px;
+    height: auto;
     width: 100%;
     padding: 30px;
     background-color:#EFF5FB;
